--- a/styles/misiones.css
+++ b/styles/misiones.css
@@ -21,6 +21,7 @@
     margin-left: 5px;
     margin-right: 30px;
 
+    border:none;
     border-radius: 10px;
     box-shadow: 0px 10px 10px gray;
 
