align content missions

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@ body{
 
 header{
     margin: 0px;
-    padding: 30px;
+    padding-top: 30px;
     padding-bottom: 50px;
     width: 100%;
     background-color: aquamarine;
